--- a/docs/event/路由注解事件.md
+++ b/docs/event/路由注解事件.md
@@ -122,4 +122,110 @@ public function index($arg) {
 
 ## 获取请求参数 GET / POST
 
-炸毛框架支持获取外部 HTTP 请求进来的 GET 和 POST 请求，通过获取 HTTP 请求对象 [`Request`](/advanced/inside-class/) 即可。
+炸毛框架支持获取外部 HTTP 请求进来的 GET 和 POST 请求，通过获取 HTTP 请求对象 [Request](/advanced/inside-class/) 即可。对象具体属性和方法点这个链接进去就行。
+
+### 示例
+
+=== "获取 GET"
+
+	```php
+	/**
+	 * @RequestMapping("/testUrl")
+	 */
+	public function testUrl() {
+	  $get = ctx()->getRequest()->get;
+	  if(isset($get["name"])) return "hello, ".$get["name"];
+	  else return "Unknown name!!";
+	}
+	```
+
+=== "获取 POST（x-www-form-urlencoded）"
+
+	```php
+	/**
+	 * @RequestMapping("/testUrl")
+	 */
+	public function testUrl() {
+	  $post = ctx()->getRequest()->post;
+	  if(isset($post["name"])) return "hello, ".$post["name"];
+	  else return "Unknown name!!";
+	}
+	```
+
+=== "获取 JSON POST"
+
+	```php
+	/**
+	 * @RequestMapping("/testUrl")
+	 */
+	public function testUrl() {
+	  $post = ctx()->getRequest()->rawContent();
+	  $json = json_decode($post, true);
+	  if ($json === null) return "Invalid json data!";
+	  if(isset($json["name"])) return "hello, ".$json["name"];
+	  else return "Unknown name!!";
+	}
+	```
+
+## 设置路由请求方式
+
+如果想要设置允许请求控制器的 HTTP 请求方式，可以使用方法在控制器中的 `@RequestMapping` 注解配置 `method` 参数，可以是 `GET`，`POST`，`PUT`, `PATCH`，`DELETE`，`OPTIONS`，`HEAD` 中的一个或多个。
+
+- 限定 HTTP 方法：`@RequestMapping(method="GET")`，`@RequestMapping(method={"GET","POST"})`
+
+## 静态文件服务器
+
+框架支持了静态文件的访问。如需使用，则需要先到配置文件中配置相应的 `static_file_server` 参数中 `status` 为 `true`。
+
+框架分为两种静态文件服务器，一种是全局的静态文件服务器，比如框架部署在 `http://127.0.0.1:20001/` 上通过 HTTP 访问，如果没有访问到 `@RequestMapping` 注解事件注册的路由地址，则会通过 url 自动查找静态文件服务器设置的根路径下面的文件，如果都不存在则会返回 404。
+
+### 配置全局静态文件服务器
+
+我们假设在你写的框架应用的根目录下，有如下文件和内容：
+
+```
+resources/html/hello.html (下面是内容)
+<html>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+框架文档内容太多了，写不完！！！
+</body>
+</html>
+```
+
+然后在 `global.php` 配置文件中静态文件服务器参数为：
+
+```php
+/** 静态文件访问 */
+$config['static_file_server'] = [
+    'status' => true,
+    'document_root' => realpath(__DIR__ . "/../") . '/resources/html',
+    'document_index' => [
+        'index.html'
+    ]
+];
+```
+
+最终，我们通过 `vendor/bin/start server` 等方式，启动框架后，浏览器访问 `http://127.0.0.1:20001/hello.html` 即可获取内容。
+
+### 配置局部静态文件服务器
+
+所涉及的类的命名空间：`use ZM\Http\StaticFileHandler;`
+
+局部静态文件服务器一般用于，比如机器人要发送图片，或者给其他 HTTP 服务提供文件下载的接口时可用。我们假设写了一个图片收集的一个静态文件夹区域，将其中一个子路由当作图片静态目录：
+
+```php
+/**
+ * @RequestMapping("/images/{filename}")
+ * @param $param
+ * @return StaticFileHandler
+ */
+public function staticImage($param) {
+  Console::info("[下载图片] " . $param["filename"]);
+  return new StaticFileHandler($param["filename"], "/path/to/your/image_dir/");
+}
+```
+
+这样当用户访问 `http://框架地址/images/aaa.jpg` 就可以快速地调用此路由下的局部文件服务器功能了。
