update to 2.0.3 version

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,8 +1,21 @@
 # 更新日志（v2 版本）
 
+## v2.0.3
+
+> 更新事件：2020.12.31
+
+- 修复：CQBefore 注解事件在 level 低于 200 时无法调用的 bug
+- 修复：CQMetaEvent 注解事件调用时报错的 bug
+
+## v2.0.2
+
+> 更新时间：2020.12.31
+
+- 更新：将 CQ 码调用类更新到与最新 OneBot 标准相兼容的状态
+
 ## v2.0.1
 
-> 更新事件：2020.12.23
+> 更新时间：2020.12.23
 
 - 修复：开屏报错文件夹不存在
 
