update to 2.1.3 version fix an AnnotationParser bug which is stupid

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,8 +1,34 @@
 # 更新日志（v2 版本）
 
+## v2.1.3
+
+> 更新时间：2021.1.2
+
+- 修复：注解解析器在某种特殊情况下导致的 bug
+
+## v2.1.2
+
+> 更新时间：2021.1.2
+
+- 修复：引入包模式启动时会导致的满屏报错
+
+## v2.1.1
+
+> 更新时间：2021.1.2
+
+- 修复：自定义加载注解选定 composer.json 文件错误的 bug
+
+## v2.1.0
+
+> 更新时间：2021.1.2
+
+- 新增：`@OnOpenEvent`，`@OnCloseEvent`，`@OnMessageEvent`，`@OnRequestEvent`
+- 优化事件分发器，修复一些事件分发过程中的 bug
+- 修复 `@CQBefore` 事件的 bug
+
 ## v2.0.3
 
-> 更新事件：2020.12.31
+> 更新时间：2020.12.31
 
 - 修复：CQBefore 注解事件在 level 低于 200 时无法调用的 bug
 - 修复：CQMetaEvent 注解事件调用时报错的 bug
