--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.1.4
+
+> 更新时间：2021.1.3
+
+- 修复：启动时会提示丢失类的 bug
+- 优化：HTTP 响应类如果被使用了则一律返回 false
+- 优化：PHP Warning 等报错统一样式
+
 ## v2.1.3
 
 > 更新时间：2021.1.2
