--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,14 @@
 # 更新日志（v2 版本）
 
+## v2.1.5
+
+> 更新时间：2021.1.13
+
+- 优化：终端对 PHP Warning 和 PHP Notice 的报错信息显示，统一格式
+- 新增：`ctx()->getNumArg()` 上下文中快速获取数字类型的参数的方法
+- 优化：删除不必要的调试信息
+- 优化：路由组件全面替换为 `symfony/routing`，兼容性和稳定性 up！
+
 ## v2.1.4
 
 > 更新时间：2021.1.3
