--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,14 @@
 # 更新日志（v2 版本）
 
+## v2.1.6
+
+> 更新时间：2021.1.18
+
+- 优化：代码结构
+- 增加：更多提示语
+- 修复：处理空格消息时的报错
+- 修复：上下文的bug
+
 ## v2.1.5
 
 > 更新时间：2021.1.13
