update Hello.php update docs

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,18 @@
 # 更新日志（v2 版本）
 
+## v2.2.0
+
+> 更新时间：2021.1.29
+
+- 新增：`@OnPipeMessageEvent` 注解
+- 新增：进程管理器
+- 新增：`--daemon` 守护进程化后查看状态以及一系列操作的命令行
+- 新增：WorkerCache
+- 修复：路由问题
+- 修复：`http_header` 配置项不生效的 bug
+- 优化：框架内部所有异常全部基于 `ZMException`
+- 优化：SingletonTrait 支持扩展
+
 ## v2.1.6
 
 > 更新时间：2021.1.18
