update to 2.2.2 version finally clean redundant code fix API reply in @OnTick for multi-process fix loop error reporting

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,14 @@
 # 更新日志（v2 版本）
 
+## v2.2.2
+
+> 更新时间：2021.1.29
+
+- 修复：模块文件错误时避免循环报错
+- 优化：代码结构
+- 修复：在不同进程时调用机器人 API 无法返回且报错的 bug
+- **修复：机器人无法连接的问题（2.1.6 ~ 2.2.1 受影响）**
+
 ## v2.2.1
 
 > 更新时间：2021.1.29
