update to 2.2.3 version, I am tired fix access_token not working fix waitMessage() not working in v2.2.2

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+## v2.2.3
+
+> 更新时间：2021.1.30
+
+- 修复：waitMessage() 在 v2.2.2 版本中不可用的 bug
+- 修复：access_token 无效的问题
+
 ## v2.2.2
 
 > 更新时间：2021.1.29
