--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.2.4
+
+> 更新事件：2021.2.7
+
+- 修复：终端交互导致的 ssh 断掉后 CPU 占用过高的问题
+- 修复：WorkerCache 在缺少配置文件下工作异常的问题
+- 新增：全局函数：`zm_atomic()`
+
 ## v2.2.3
 
 > 更新时间：2021.1.30
