--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,8 +1,20 @@
 # 更新日志（v2 版本）
 
+## v2.2.5
+
+> 更新时间：2021.2.20
+
+- 新增：`saveToJson()` 和 `loadFromJson()` 方法（DataProvider 类）
+- 修复：`@OnSave` 注解事件无法工作的 bug
+- 调整：自定义计时器创建时的性能调优
+- 新增：WorkerCache 方法：`hasKey()`
+- 新增：SpinLock 方法：`transaction()`（直接在事务中上锁）
+- 新增：CQ 方法：`getAllCQ()`，`_custom()`（获取消息中的所有 CQ 码）
+- 修复：CQ 类中的部分 bug
+
 ## v2.2.4
 
-> 更新事件：2021.2.7
+> 更新时间：2021.2.7
 
 - 修复：终端交互导致的 ssh 断掉后 CPU 占用过高的问题
 - 修复：WorkerCache 在缺少配置文件下工作异常的问题
