update to 2.2.7 version fix reply() bug fix access_token bug

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,27 @@
 # 更新日志（v2 版本）
 
+## v2.2.7
+
+> 更新时间：2021.2.27
+
+- 修复：2.2.6 版本下 `reply()` 方法在群里调用会 at 成员的 bug
+- 修复：空 `access_token` 的情况下会无法连入的 bug
+- 修复：使用 Closure 闭包函数自行编写逻辑的判断返回 false 无法阻断连接的 bug
+- 
+
+## v2.2.6
+
+> 更新时间：2021.2.26
+
+- 新增：`uuidgen()` 全局函数，快速生成 uuid
+- 修复：MySQL `rawQuery()` 在参数为非数组时会报 Warning 的 bug
+- 新增：示例模块的 API 示例：一言查询
+- 优化：删减部分无用代码
+- 更改：`ctx()->reply()` 方法改为调用隐藏方法：`.handle_quick_operation`
+- 修复：`ctx()->finalReply()` 一直以来的 bug（未阻断事件）
+- 新增：`access_token` 配置项支持闭包函数自行设计判断方式和逻辑
+- 新增：全局函数 `working_dir()`
+
 ## v2.2.5
 
 > 更新时间：2021.2.20
