update to 2.2.8 version update motd message

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.2.8
+
+> 更新时间：2021.3.2
+
+- 更新：MOTD 显示的方式，更加直观和炫酷
+
 ## v2.2.7
 
 > 更新时间：2021.2.27
@@ -7,7 +13,6 @@
 - 修复：2.2.6 版本下 `reply()` 方法在群里调用会 at 成员的 bug
 - 修复：空 `access_token` 的情况下会无法连入的 bug
 - 修复：使用 Closure 闭包函数自行编写逻辑的判断返回 false 无法阻断连接的 bug
-- 
 
 ## v2.2.6
 
