--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.2.9
+
+> 更新时间：2021.3.6
+
+- 更新：`reply()` 方法传入数组则变为快速相应的 API 操作
+- 修复：在 Worker 进程下调用 `ZMUtil::reload()` 会导致一些奇怪的 bug
+- 修复：`reply()` 时会 at 私聊成员的 bug（由 go-cqhttp 导致）
+
 ## v2.2.8
 
 > 更新时间：2021.3.2
