--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.2.10
+
+> 更新时间：2021.3.8
+
+- 新增：用户态 php 编译脚本 `build-runtime.sh`
+- 移除：无用的调试信息
+- 新增：`--show-php-ver` 启动参数
+
 ## v2.2.9
 
 > 更新时间：2021.3.6
