update to build 385 add CQObject for CQ add after-stop action(set terminal level 0) update global.php modules, add http_proxy_server add MessageUtil.php for message parsing add RouteManager::addStaticFileRoute() for quick handling static file finish onTask function finally!! add TaskManager::runTask()

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,15 @@
 # 更新日志（v2 版本）
 
+## 2.2.11
+
+> 更新时间：2021.3.13
+
+- 新增：内部 ID 版本号（ZM_VERSION_ID）
+- 优化：启动时 log 的等级
+- 移除：终端输入命令
+- 修复：纯 HTTP 服务器的启动 bug
+- 新增：`zm_timer` 的报错处理，防止服务器直接崩掉
+
 ## v2.2.10
 
 > 更新时间：2021.3.8
