--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,10 +1,18 @@
 # 更新日志（v2 版本）
 
-## 2.3.0-beta1
+## 2.3.0
 
 > 更新时间：2021.3.16
 
-- 
+- 新增：MessageUtil 消息处理工具类
+- 新增：TaskManager，封装了 TaskWorker 进程的应用
+- 新增：CQObject，使用 `CQ::getCQ()` 可获取对象形式的 CQ 码解析结果
+- 新增：`@OnTask` 注解，绑定任务函数
+- 新增：RouteManager 路由管理类，可快速添加路由
+- 修复：`ZM_DATA` 和 `DataProvider::getDataFolder()` 返回 false 的问题
+- 优化：关闭显示停止框架后多余的输出信息
+
+注：本次升级建议升级后合并全局配置文件，有一些新加的内容。
 
 ## 2.2.11
 
