update to build 389 add various global functions

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,6 +1,18 @@
 # 更新日志（v2 版本）
 
-## 2.3.0
+## v2.3.2
+
+> 更新时间：2021.3.18
+
+- 新增：全局方法（`zm_dump()`，`zm_error()`，`zm_warning()`，`zm_info()`，`zm_success()`，`zm_verbose()`，`zm_debug()`，`zm_config()`，）
+
+## v2.3.1
+
+> 更新时间：2021.3.18
+
+- 规范代码，修复一个小报错的 bug
+
+## v2.3.0
 
 > 更新时间：2021.3.16
 
@@ -14,7 +26,7 @@
 
 注：本次升级建议升级后合并全局配置文件，有一些新加的内容。
 
-## 2.2.11
+## v2.2.11
 
 > 更新时间：2021.3.13
 
