--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,30 +1,18 @@
 # 更新日志（v2 版本）
 
-## v2.4.0（390）
+## v2.3.2 (build 395)
 
-> 更新时间：2021.3.18
+> 更新时间：2021.3.23
 
-- 新增：全局方法（`zm_dump()`，`zm_error()`，`zm_warning()`，`zm_info()`，`zm_success()`，`zm_verbose()`，`zm_debug()`，`zm_config()`）
-
-- 修复：部分内部存储存在的内存泄漏问题
-- 新增：remote_terminal（远程终端）内置模块，可以用 nc 直接远程连接框架（弥补原先删除掉的终端输入）
-- 新增：`DataProvider::getReloadableFiles()` 返回可通过热重启（reload）来重新加载的 php 文件列表（多用于调试）
-- 兼容性变更：**要求最低 Swoole 版本为 4.5.0**
-- 优化：reload 和 stop 重载和停止框架的逻辑，防止卡死
-- 新增：远程终端命令支持自定义添加（`@TerminalCommand` 注解）
-- 
-
-## v2.3.2
-
-> 更新时间：2021.3.18
-
-- 新增：全局方法（`zm_dump()`，`zm_error()`，`zm_warning()`，`zm_info()`，`zm_success()`，`zm_verbose()`，`zm_debug()`，`zm_config()`，）
+- 修复：数据库查询部分情况无法正常使用的 bug
+- 修复：内存泄漏问题
 
 ## v2.3.1
 
 > 更新时间：2021.3.18
 
 - 规范代码，修复一个小报错的 bug
+
 
 ## v2.3.0
 
