update composer and roll to 396(v2.3.3)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.3.3 (build 396)
+
+> 更新时间：2021.3.23
+
+- 修复：Composer 调试时出现加载重复的问题
+
 ## v2.3.2 (build 395)
 
 > 更新时间：2021.3.23
