--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,23 +1,13 @@
 # 更新日志（v2 版本）
 
-## v2.3.4 (build 397)
+## v2.3.5 (build 398)
 
 > 更新时间：2021.3.23
 
-- 修复：版本号显示
+- 修复：MySQL 数据库查询导致的一系列问题
+- 修复：内存泄露问题
 
-## v2.3.3 (build 396)
-
-> 更新时间：2021.3.23
-
-- 修复：Composer 调试时出现加载重复的问题
-
-## v2.3.2 (build 395)
-
-> 更新时间：2021.3.23
-
-- 修复：数据库查询部分情况无法正常使用的 bug
-- 修复：内存泄漏问题
+> 2.3.2-2.3.4 版本由于操作失误导致代码不完整，请直接使用 2.3.5 即可。
 
 ## v2.3.1
 
