--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,39 @@
 # 更新日志（v2 版本）
 
+## v2.4.0（build 400）
+
+> 更新时间：2021.3.24
+
+- 新增：检查全局配置文件的命令
+- 新增：全局配置文件更新记录
+- 依赖变更：**Swoole 最低版本需要 4.5.0**
+- 优化：reload 和 stop 命令重载和停止框架的逻辑
+- 新增：`$_running_annotation` 变量，可在注解事件中的类使用
+- 新增：远程终端（Remote Terminal），弥补原来删掉的本地终端，通过 nc 命令连接即可
+- 新增：启动参数 `--worker-num`，`--task-worker-num`，`--remote-terminal`
+- 更新：全局配置文件结构
+- 新增：Swoole 计时器报错处理
+- 新增：全局方法（`zm_dump()`，`zm_error()`，`zm_warning()`，`zm_info()`，`zm_success()`，`zm_verbose()`，`zm_debug()`，`zm_config()`）
+- 新增：示例模块的图灵机器人和 at 机器人的处理函数
+- 新增：MessageUtil 工具类新增 `isAtMe(), splitCommand(), matchCommand()` 方法
+- 新增：ProcessManager 进程管理类新增 `workerAction(), sendActionToWorker(), resumeAllWorkerCoroutines()` 方法
+- 优化：CQCommand 的匹配逻辑
+- 新增：支持添加自定义远程终端指令的 `@TerminalCommand` 注解
+- 新增：图灵机器人 API 封装函数
+- 新增：ZMUtil 工具杂项类 `getReloadableFiles()` 函数
+
+
+
+
+
+
+- 修复：部分内部存储存在的内存泄漏问题
+- 新增：remote_terminal（远程终端）内置模块，可以用 nc 直接远程连接框架（弥补原先删除掉的终端输入）
+- 新增：`DataProvider::getReloadableFiles()` 返回可通过热重启（reload）来重新加载的 php 文件列表（多用于调试）
+- 兼容性变更：**要求最低 Swoole 版本为 4.5.0**
+- 优化：reload 和 stop 重载和停止框架的逻辑，防止卡死
+- 新增：远程终端命令支持自定义添加（`@TerminalCommand` 注解）
+
 ## v2.3.5 (build 398)
 
 > 更新时间：2021.3.23
@@ -14,7 +48,6 @@
 > 更新时间：2021.3.18
 
 - 规范代码，修复一个小报错的 bug
-
 
 ## v2.3.0
 
