update to v2.4.0 (build 400) add systemd:generate command add check:config command init command add `--force|-F` option add MessageUtil function `addShortCommand()` clear debug message

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -2,7 +2,7 @@
 
 ## v2.4.0（build 400）
 
-> 更新时间：2021.3.24
+> 更新时间：2021.3.25
 
 - 新增：检查全局配置文件的命令
 - 新增：全局配置文件更新记录
@@ -21,18 +21,18 @@
 - 新增：支持添加自定义远程终端指令的 `@TerminalCommand` 注解
 - 新增：图灵机器人 API 封装函数
 - 新增：ZMUtil 工具杂项类 `getReloadableFiles()` 函数
+- 新增：`vendor/bin/start systemd:generate` 生成 systemd 配置文件的功能
+- 新增：`vendor/bin/start check:config` 检查配置文件更新的命令
+- 新增：`vendor/bin/init` 新增 `--force` 参数，覆盖现有文件重新生成
+- 新增：MessageUtil 新增方法：`addShortCommand()`，用于快速添加静态文本问答回复的
 
+以下是需要**手动更新**或**更换新写法**的部分：
 
+- 配置文件 `global.php` 中的 `modules` 字段展开，内置模块的配置一律平铺到外面。详见 [更新日志 - 配置文件变更](/update/config)。
 
+以下是默认机器人直接连接产生的变更：
 
-
-
-- 修复：部分内部存储存在的内存泄漏问题
-- 新增：remote_terminal（远程终端）内置模块，可以用 nc 直接远程连接框架（弥补原先删除掉的终端输入）
-- 新增：`DataProvider::getReloadableFiles()` 返回可通过热重启（reload）来重新加载的 php 文件列表（多用于调试）
-- 兼容性变更：**要求最低 Swoole 版本为 4.5.0**
-- 优化：reload 和 stop 重载和停止框架的逻辑，防止卡死
-- 新增：远程终端命令支持自定义添加（`@TerminalCommand` 注解）
+- 2.4.0 新增了默认回复其他人 at 的消息，如果不需要，请将 `Hello.php` 中的 `changeAt()` 和 `turingAPI()` 方法删除。
 
 ## v2.3.5 (build 398)
 
