update to 2.4.2 version (build 402) change WORKING_DIR constant change logic of savePersistence() add LightCache addPersistence() and removePersistence() method add `./zhamao` command

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,16 @@
 # 更新日志（v2 版本）
 
+# v2.4.2 (build 402)
+
+> 更新时间：202.3.27
+
+- 更改：`WORKING_DIR` 常量的含义
+- 修复：未指定 `--remote-terminal` 参数时还依旧开启远程终端的 bug
+- 删除：`phar_classloader()` 全局方法
+- 更改：持久化存储 LightCache 的逻辑，修复一个愚蠢的容易造成误用的方式
+- 新增：LightCache 方法 `addPersistence()` 和 `removePersistence()`
+- 新增：框架启动短指令 `./zhamao` 或 `php zhamao`
+
 ## v2.4.1 (build 401)
 
 > 更新时间：2021.3.25
@@ -29,7 +40,7 @@
 - 新增：ZMUtil 工具杂项类 `getReloadableFiles()` 函数
 - 新增：`vendor/bin/start systemd:generate` 生成 systemd 配置文件的功能
 - 新增：`vendor/bin/start check:config` 检查配置文件更新的命令
-- 新增：`vendor/bin/init` 新增 `--force` 参数，覆盖现有文件重新生成
+- 新增：`vendor/bin/start init` 新增 `--force` 参数，覆盖现有文件重新生成
 - 新增：MessageUtil 新增方法：`addShortCommand()`，用于快速添加静态文本问答回复的
 
 以下是需要**手动更新**或**更换新写法**的部分：
