update to 2.4.3 version (build 403) add config: swoole.max_wait_time (default 5) add constant MAIN_WORKER add getExpireTS() for LightCache fix savePersistence() bug add zm_go() to prevent errors

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,8 +1,14 @@
 # 更新日志（v2 版本）
 
-# v2.4.2 (build 402)
+## v2.4.3 (build 403)
 
-> 更新时间：202.3.27
+> 更新时间：2021.3.29
+
+- 
+
+## v2.4.2 (build 402)
+
+> 更新时间：2021.3.27
 
 - 更改：`WORKING_DIR` 常量的含义
 - 修复：未指定 `--remote-terminal` 参数时还依旧开启远程终端的 bug
