--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -4,7 +4,13 @@
 
 > 更新时间：2021.3.29
 
-- 
+- 新增：swoole 设置配置新增 `max_wait_time` 项，设置等待进程关闭流程最大时间（秒）
+- 新增：常量 `MAIN_WORKER`，值等同于 `worker_cache` 项中的 `worker` 参数（WorkerCache 所在的进程）
+- 新增：`LightCache` 新增 `getExpireTS()` 方法，用于返回项目过期的时间戳
+- 修复：`savePersistence()` 的部分丢失数据的 bug
+- 新增：全局方法 `zm_go()`
+- 修复：2.4.2 版本下的刷屏报错
+- 优化：Ctrl+C 响应机制，启用异步 重启/关闭 措施，防止残留僵尸进程和丢失数据
 
 ## v2.4.2 (build 402)
 
