--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.4.4 (build 405)
+
+> 更新时间：2021.3.29
+
+以下是可能不兼容的变更：
+
+- 新增依赖：框架需要 PHP 安装 pcntl 扩展以及开启 `pcntl_signal` 函数（一般情况下编译安装的都会有，宝塔面板请手动解除函数禁用）
+
 ## v2.4.3 (build 403)
 
 > 更新时间：2021.3.29
