update to 2.5.0-b1 (build 408)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,68 @@
 # 更新日志（v2 版本）
 
+## v2.5.0（未发布，测试中）
+
+> 更新时间：未知
+
+以下是版本**新增内容**：
+
+- 新增全新的模块系统，可打包模块（src 目录下的子目录用户逻辑代码）为 phar 格式进行分发和版本备份。
+- 全局配置文件新增 `module_loader` 项，用于配置外部模块加载的一些设置。
+- 全局配置文件新增 `runtime` 配置项，可自定义配置 Swoole 的一些运行时参数，目前可配置一键协程化的 Hook 参数。
+- 新增 `module:list` 命令，用于查看未打包和已打包的模块列表。
+- 新增 `module:pack` 命令，用于打包现有 src 目录下的模块。
+- 新增打包框架功能，支持将用户的整个项目连同炸毛框架打包为一个 phar 便携运行，使用命令 `build`。
+- 新增快捷脚本 `./zhamao`，效果同 `vendor/bin/start` 或 `bin/start`。
+- 新增启动参数 `--interact`：又重新支持交互终端了，但还是有点问题，不推荐使用。
+- 新增启动参数 `--disable-safe-exit`：如果你的项目在 Ctrl+C 时总是卡住且项目内没有什么使用 LightCache 等缓存在内存的数据可开启防止关不掉框架。
+- 新增启动参数 `--preview`：只显示参数，不启动炸毛框架的服务器。
+- 新增启动参数 `--force-load-module`：强制打包状态下加载的模块（使用英文逗号分隔多个模块名称）。
+- `CoroutinePool` 协程池新增 `getRunningCoroutineCount` 方法，用于查看协程池中的协程数量。
+- `DataProvider` 新增 `getFrameworkRootDir()`、`getSourceRootDir()`，分别代表获取框架的根目录和用户源码根目录。（详见下方对目录的定义解释）
+- `DataProvider` 中 `getDataFolder` 新增参数 `$second = ''`，如果给定，则自动创建子目录 `$second` 并返回。
+- `DataProvider` 新增 `scanDirFiles()` 方法，用于扫描目录，可选择是否递归、是否返回相对路径，也支持扫描 Phar 文件内的路径，非常好用。
+- `DataProvider` 新增 `isRelativePath()` 方法，检查路径是否为相对路径（根据第一个字符是否是 '/' 来判断）。
+- `ZMUtil` 新增 `getClassesPsr4()` 方法，用于根据 Psr-4 标准来获取目录下的所有类文件。
+- 新增全局错误码，可以根据错误码在文档内快速定位和解决问题。
+
+以下是版本**修改内容**：
+
+- 启动文件 `vendor/bin/start` 修改为 shell 脚本，可自动寻找 PHP 环境。
+- 全局配置文件的 `zm_data` 根目录默认修改为 `WORKING_DIR`。
+- 全局配置文件删除 `server_event_handler_class` 项，此项废弃。
+- 修复部分 CQ 码解析过程中没有转义的问题。
+- 将 `ZMRobot` 类转移为 `OneBotV11` 类，但提供兼容。
+- 修复在守护进程模式下使用 `daemon:reload` 和 `daemon:stop` 命令可能失效的问题。
+- 修复 systemd 生成时脚本目录错误的 bug。
+- 修复 PipeMessage 等事件未捕获错误导致崩溃的问题。
+- `ZM\Http\RouteManager` 移动到 `ZM\Utils\Manager\RouteManager`，但原地址兼容。
+- 修复 `Terminal` 类使用的一些问题。
+- 对 `pcntl` 扩展改为可选依赖，当 Swoole 版本大于等于 4.6.7 时不需要安装 `pcntl` 扩展。
+- 修正启动时框架对缺省配置项的一些默认参数。
+- 注解 `@OnSetup` 和 `@SwooleHandler` 可直接使用，无需设置 `server_event_handler_class` 即可。
+- 修复框架在一些非正常终端中运行时导致错误的问题。
+- 使用 `--debug-mode` 参数时，自动开启热更新。
+
+**对目录的定义解释**：
+
+在 2.4.4 版本之前，使用炸毛框架中，只含有两种目录，`getWorkingDir` 和 `getDataFolder`，分别代表获取工作目录和数据目录。在 2.5 版本中，又新增了 `getFrameworkRootDir` 代表获取框架的根目录，`getSourceRootDir` 代表获取源码的根目录。
+
+以 Composer 运行模式举例，如果你使用 `composer create-project zhamao/framework-starter` 命令新建的框架，那么假设我们从 `/app` 目录下运行此命令，然后使用 `cd framework-starter/` 进入项目目录，此时我们使用 `vendor/bin/start server` 命令运行服务器，对应的目录为：
+
+- `WorkingDir`：`/app/framework-starter/`
+- `SourceRootDir`：`/app/framework-starter/`
+- `FrameworkRootDir`：`/app/framework-starter/vendor/zhamao/framework/`
+
+如果以源码模式（直接克隆 `zhamao-framework.git` 仓库），启动框架，那么使用命令 `bin/start server` 启动框架后，以上三个返回的目录则完全相同。
+
+如果以 2.5 版本新的项目归档模式（build）启动框架，假设我们的项目代码打包为 `server.phar`，在 `/app/` 目录，我们使用命令 `php server.phar server` 启动炸毛框架，那么它对应的目录为：
+
+- `WorkingDir`：`/app/`
+- `SourceRootDir`：`phar:///app/server.phar/`
+- `FrameworkRootDir`：`phar:///app/server.phar/vendor/zhamao/framework/`
+
+如果最后一种归档方式启动的框架是从源码模式打包而来，那么 `FrameworkRootDir` 就与 `SourceRootDir` 相同。
+
 ## v2.4.4 (build 405)
 
 > 更新时间：2021.3.29
