update to 2.5.0-b2 (build 409)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -11,6 +11,7 @@
 - 全局配置文件新增 `runtime` 配置项，可自定义配置 Swoole 的一些运行时参数，目前可配置一键协程化的 Hook 参数。
 - 新增 `module:list` 命令，用于查看未打包和已打包的模块列表。
 - 新增 `module:pack` 命令，用于打包现有 src 目录下的模块。
+- 新增 `module:unpack` 命令，用于解包现有的 phar 模块包。
 - 新增打包框架功能，支持将用户的整个项目连同炸毛框架打包为一个 phar 便携运行，使用命令 `build`。
 - 新增快捷脚本 `./zhamao`，效果同 `vendor/bin/start` 或 `bin/start`。
 - 新增启动参数 `--interact`：又重新支持交互终端了，但还是有点问题，不推荐使用。
@@ -24,11 +25,22 @@
 - `DataProvider` 新增 `isRelativePath()` 方法，检查路径是否为相对路径（根据第一个字符是否是 '/' 来判断）。
 - `ZMUtil` 新增 `getClassesPsr4()` 方法，用于根据 Psr-4 标准来获取目录下的所有类文件。
 - 新增全局错误码，可以根据错误码在文档内快速定位和解决问题。
+- 中间件和注解事件支持回溯，可以快速查看调用栈（比如中间件可以知道自己是在哪个注解事件中被调用）。
+- 使用 `./zhamao build` 来构建框架的 phar 包时增加显示进度条。
+- EventDispatcher 新增方法 `getEid()` 和 `getClass()`，分别用于获取事件分发 ID 和注解事件的注解类名称。
+- 新增 EventTracer，用于追踪事件的调用栈。
+- 中间件支持传参。
 
 以下是版本**修改内容**：
 
 - 启动文件 `vendor/bin/start` 修改为 shell 脚本，可自动寻找 PHP 环境。
+- 全局强制依赖 `league/climate` 组件。
+- 修复框架启动时的信息显示换行问题。
+- 修复框架使用 Phar 方式启动时导致的报错。
+- 修复使用 Ctrl+C 结束时一部分用户卡住的 bug。
+- 远程和本地终端去掉 stop 命令，建议直接使用发 SIGTERM 方式结束框架。
 - 全局配置文件的 `zm_data` 根目录默认修改为 `WORKING_DIR`。
+- 命令 `systemd:generate` 修改为 `generate:systemd`。
 - 全局配置文件删除 `server_event_handler_class` 项，此项废弃。
 - 修复部分 CQ 码解析过程中没有转义的问题。
 - 将 `ZMRobot` 类转移为 `OneBotV11` 类，但提供兼容。
@@ -62,6 +74,15 @@
 - `FrameworkRootDir`：`phar:///app/server.phar/vendor/zhamao/framework/`
 
 如果最后一种归档方式启动的框架是从源码模式打包而来，那么 `FrameworkRootDir` 就与 `SourceRootDir` 相同。
+
+**版本部分兼容问题变化**：
+
+理论上如果不使用框架内部未开放的接口方法的话，从 2.4 升级到 2.5 是非常自然的，但是也有一部分可能会造成不兼容的问题。
+
+- 生成 systemd 配置文件的命令 `systemd:generate` 变成 `generate:systemd`。
+- 全局配置文件中的 `zm_data` 的父目录由 `__DIR__ . "/../"` 改为 `WORKING_DIR`。
+- 2.5 版本将 ZMRobot 类中的所有函数方法都移动到了 `OneBotV11` 类中，但原先的 ZMRobot 还可以使用。
+- 
 
 ## v2.4.4 (build 405)
 
