update to 2.5.0-b3 (build 410)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -8,7 +8,7 @@
 
 - 新增全新的模块系统，可打包模块（src 目录下的子目录用户逻辑代码）为 phar 格式进行分发和版本备份。
 - 全局配置文件新增 `module_loader` 项，用于配置外部模块加载的一些设置。
-- 全局配置文件新增 `runtime` 配置项，可自定义配置 Swoole 的一些运行时参数，目前可配置一键协程化的 Hook 参数。
+- 全局配置文件新增 `runtime` 配置项，可自定义配置 Swoole 的一些运行时参数，目前可配置一键协程化的 Hook 参数和 Swoole Server 的启动模式。
 - 新增 `module:list` 命令，用于查看未打包和已打包的模块列表。
 - 新增 `module:pack` 命令，用于打包现有 src 目录下的模块。
 - 新增 `module:unpack` 命令，用于解包现有的 phar 模块包。
@@ -30,6 +30,9 @@
 - EventDispatcher 新增方法 `getEid()` 和 `getClass()`，分别用于获取事件分发 ID 和注解事件的注解类名称。
 - 新增 EventTracer，用于追踪事件的调用栈。
 - 中间件支持传参。
+- MySQL 数据库查询器改为使用 `doctrine/dbal` 组件，更灵活和稳定。
+- 新增对 `SWOOLE_BASE` 模式的支持（支持只启动一个进程的 Server）。
+- 
 
 以下是版本**修改内容**：
 
@@ -54,6 +57,11 @@
 - 注解 `@OnSetup` 和 `@SwooleHandler` 可直接使用，无需设置 `server_event_handler_class` 即可。
 - 修复框架在一些非正常终端中运行时导致错误的问题。
 - 使用 `--debug-mode` 参数时，自动开启热更新。
+- 修复脚手架在使用 composer 更新后检查全局配置功能的 bug。
+- 修复重启和关闭框架时造成的非正常连接断开。
+- 改用独立进程监听文件变化和终端输入。
+- 修复有协程中断的任务时停止服务器会报 Swoole 警告的 bug。
+- 修复连接被反复断开的问题。
 
 **对目录的定义解释**：
 
@@ -82,7 +90,6 @@
 - 生成 systemd 配置文件的命令 `systemd:generate` 变成 `generate:systemd`。
 - 全局配置文件中的 `zm_data` 的父目录由 `__DIR__ . "/../"` 改为 `WORKING_DIR`。
 - 2.5 版本将 ZMRobot 类中的所有函数方法都移动到了 `OneBotV11` 类中，但原先的 ZMRobot 还可以使用。
-- 
 
 ## v2.4.4 (build 405)
 
