update to build 417

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.5.1 (build 416)
+
+> 更新时间：2021.7.9
+
+- 修复：脚手架无法正常使用 `init` 命令的 bug。
+
 ## v2.5.0（build 415）
 
 > 更新时间：2021.7.9
