--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,14 @@
 # 更新日志（v2 版本）
 
+## v2.5.3 (build 420)
+
+> 更新事件：2021.9.11
+
+- 修复 DB 模块在未连接数据库的时候抛出未知异常
+- 修复部分情况下打包模块出现的错误
+- 修复 OneBot 事件无法响应的 bug
+- 新增部分 EventDispatcher 触发的事件 debug 日志
+
 ## v2.5.2 (build 418)
 
 > 更新时间：2021.9.10
