update to version 2.5.4 (buid 421)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,8 +1,14 @@
 # 更新日志（v2 版本）
 
+## v2.5.4 (buidl 421)
+
+> 更新时间：2021.9.11
+
+- 删除多余的调试信息
+
 ## v2.5.3 (build 420)
 
-> 更新事件：2021.9.11
+> 更新时间：2021.9.11
 
 - 修复 DB 模块在未连接数据库的时候抛出未知异常
 - 修复部分情况下打包模块出现的错误
