update to version 2.5.5 (buid 422)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+## v2.5.5 (build 422)
+
+> 更新时间：2021.10.6
+
+- 修复 `script_` 前缀无法被排除加载模块的 bug
+- 修复 MySQL 组件的依赖问题
+
 ## v2.5.4 (buidl 421)
 
 > 更新时间：2021.9.11
