update to 2.5.6 (build 423)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.5.6 (build 423)
+
+> 更新时间：2021.10.17
+
+- 修复 PHP 7.2 ~ 7.3 下无法使用新版 MySQL 组件的 bug
+
 ## v2.5.5 (build 422)
 
 > 更新时间：2021.10.6
