update to 2.5.7 (build 425)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.5.7 (build 425)
+
+> 更新时间：2021.11.3
+
+- 调低 OneBot 相关事件在 Swoole 的优先级
+- 修复部分情况下闭包事件函数分发时引发的崩溃 bug
+- 修复 reload 时会断开 WebSocket 连接且导致进程崩溃的 bug
+
 ## v2.5.6 (build 423)
 
 > 更新时间：2021.10.17
