--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.5.8 (build 426)
+
+> 更新时间：2021.11.10
+
+- 修复 CQ 码的解析函数 Bug（#52）
+
 ## v2.5.7 (build 425)
 
 > 更新时间：2021.11.3
