--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.6.1 (build 428)
+
+> 更新时间：2021.11.16
+
+- 修复 ctx()->waitMessage() 在 array 消息模式下无法正确返回消息字符串的问题
+- 新增 ctx()->getArrayMessage() 和 ctx()->getStringMessage() 两个方法
+- 修复注解事件 CQCommand 和 CQMessage 在 array 消息模式下无法正确解析的 Bug
+
 ## v2.6.0 (build 427)
 
 > 更新时间：2021.11.16
