--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.6.2 (build 429)
+
+> 更新时间：2021.12.7
+
+- 新增配置项 `onebot`.`message_command_policy`
+- 新增 CQCommand 阻断策略的自定义配置功能
+- 修复 CQAfter 无法正常使用的 bug #53
+
 ## v2.6.1 (build 428)
 
 > 更新时间：2021.11.16
