update to build 430

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+# v2.6.3 (build 430)
+
+> 更新时间：2021.12.8
+
+- 删除调试信息
+- 修复 #56 中关于数据库组件的 Bug
+
 ## v2.6.2 (build 429)
 
 > 更新时间：2021.12.7
