update to 2.6.4 (build 432)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,6 +1,16 @@
 # 更新日志（v2 版本）
 
-# v2.6.3 (build 430)
+## v2.6.4（build 432）
+
+> 更新时间：2021.12.25
+
+- 新增 GoCqhttpAPI 包，用于支持额外的 OneBot Action（API）
+- 修复 MySQL 查询器中 `fetchOne()` 方法无法正确返回值的 Bug
+- 修复 Swoole Hook 因配置不当无法正确使用的 Bug
+- 修复 Issue #50
+- 新增 PhpStorm IDE 直接运行框架的脚本
+
+## v2.6.3 (build 430)
 
 > 更新时间：2021.12.8
 
