update to 2.6.5 (build 433)

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.6.5（build 433）
+
+> 更新时间：2021.12.28
+
+- 修复 OneBotV11 因 IDE 自动优化导致 API 接口发生变化的问题
+
 ## v2.6.4（build 432）
 
 > 更新时间：2021.12.25
