--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+## v2.6.6（build 434）
+
+> 更新时间：2022.1.8
+
+- 修复框架在 PHP 8.1 下运行时的一些问题
+- 新增 Console 日志输出到文件的功能
+
 ## v2.6.5（build 433）
 
 > 更新时间：2021.12.28
