--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,32 @@
 # 更新日志（v2 版本）
 
+## v2.7.0（build 447）
+
+> 更新时间：2022.3.20
+
+- 优化分离 WorkerManager 与 ProcessManager 的职责
+- 新增 Ctrl+C 一次无法停止框架时多次 Ctrl+C 后可强行杀掉所有进程的功能
+- `./zhamao server:stop` 新增参数 `--force`，使用 `SIGKILL` 强行杀掉所有进程
+- 新增 AnnotationParser 对 `autoload-dev` 项中的 `psr-4` 默认检索条件
+- 新增框架启动状态检测功能，如果已经启动了同样目录的框架，则会报错
+- 新增“强制启用轮询模式启动热更新”功能（参数 `--polling-watch`）
+- 修复与 PHP 8.1 的兼容性
+- 对 DaemonCommand 进行优化，与 ServerCommand 效果相同
+- 修复 `autoload`.`psr-4` 不存在时报错的 Bug
+- 新增框架停止时 Worker 退出回显状态码
+- 新增 inotify 判断模式，如果使用 `--watch` 检测到没有安装 inotify，则自动使用轮询模式
+- 新增 PHPStan 和 PHP CS Fixer 并优化全局代码
+- 修复 `ctx()` 可能会返回 null 的 Bug
+- 修复 Response 类在 PHP 8.1 环境下的报错
+- 新增 PHP 8 Attribute 与注解同时支持的特性
+- 新增方法宏（Macroable）
+- 修复打包模块时命名空间与实际不一致的 Bug
+- 修复打包模块后 `files` 的 autoload 项不能被解压和引入的 Bug
+- 修复注释空格的样式
+- 更改 `extra`.`exclude_annotate` 为 `zm`.`exclude-annotation-path` 项
+- 新增配置项 `runtime`.`annotation_reader_ignore`：支持注解解析器忽略注解的自定义
+- 新增 `./zhamao server` 下的 `--no-state-check` 参数，关闭“启动框架前的运行状态检查”功能
+
 ## v2.6.6（build 434）
 
 > 更新时间：2022.1.8
