--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.7.1（build 448）
+
+> 更新时间：2022.3.20
+
+- 加快 build 命令的执行速度，取消进度条和提升性能
+
 ## v2.7.0（build 447）
 
 > 更新时间：2022.3.20
