--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,15 @@
 # 更新日志（v2 版本）
 
+## v2.7.3（build 453）
+
+> 更新时间：2022.3.25
+
+- 新增命令帮助生成器
+- 重构全局函数，统一函数命名，并补全注释
+- 修复 OnSetup 注解无法使用 Attribute 解析的 Bug
+- 修复 HelpGenerator 的 Alias 不工作的 Bug
+- 新增 property 注解用于 IDE 识别
+
 ## v2.7.2（build 449）
 
 > 更新时间：2022.3.21
