--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,13 @@
 # 更新日志（v2 版本）
 
+## v2.7.4（build 454）
+
+> 更新时间：2022.3.27
+
+- 修复部分命令下无法杀掉进程的 Bug
+- 新增 `@Cron` 注解
+- 修复全局函数 `match_pattern` 无法正常工作的 Bug
+
 ## v2.7.3（build 453）
 
 > 更新时间：2022.3.25
