--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+## v2.7.4（build 455）
+
+> 更新时间：2022.3.27
+
+- 修复前几个小版本无法收发消息的 Bug
+- 新增 API Document 自动生成脚本
+
 ## v2.7.4（build 454）
 
 > 更新时间：2022.3.27
