update version docs

--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,6 +1,20 @@
 # 更新日志（v2 版本）
 
-## v2.7.4（build 455）
+## v2.7.6（build 460）
+
+> 更新时间：2022.4.3
+
+- 重构 phpunit-swoole，使其可以正常使用
+- 新增 `--private-mode` 参数，用于隐藏启动前的 MOTD 及敏感信息
+- 修复 Composer extra 配置项 `zm.exclude-annotation-path` 不能正常工作的 Bug
+- 优化注解事件加载器，防止 Master 进程中添加的事件在 Worker 中被覆盖的问题
+- 修复 `DataProvider::isRelativePath()` 方法判断有误的 Bug
+- 新增退出框架时支持以非 0 exit code 退出的功能
+- 优化 `ZMUtil::getClassesPsr4()` 方法，排除不含类的文件
+- 优化 `module:xxx` 类命令的有关实现代码
+- 优化代码到 phpstan-level-4
+
+## v2.7.5（build 455）
 
 > 更新时间：2022.3.27
 
