--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,38 @@
 # 更新日志（v2 版本）
 
+## v2.8.0（build 473）
+
+> 更新时间：2022.5.7
+
+- 新增 AllBotsProxy、AllGroupsProxy 代理类，支持批量发送机器人动作
+- 新增全局函数 `implode_when_necessary()`，用于将可能为数组的参数转换为字符串
+- 新增依赖注入、容器支持，目前对 Swoole 事件、机器人事件均支持使用依赖注入
+- 新增全局容器方法 `container()`、`resolve()`、`app()`，用于获取容器参数等
+- 新增相关容器测试
+- 新增链式调用全局方法 `chain()`
+- 新增函数执行时间工具全局函数 `stopwatch()`
+- 新增 `@CommandArgument` 注解，可直接通过注解添加聊天机器人命令参数
+- （内部）新增 `EventManager::$event_map`，用于补充对事件对象遍历的方式
+- 新增 `EventMapIterator` 类，用于遍历注解事件对象
+- 新增 `MessageUtil::checkArguments()` 方法，用于检查 `@CommandArgument` 注解
+- 新增启动命令参数 `--audit-mode`，用于单次审计模式
+- 新增部分不可执行脚本的防呆退出功能
+- 重构全局方法 `match_pattern()`，优化性能以及解决部分字符串不能匹配的 Bug
+- 优化容器支持无名顺序参数的调用
+- 优化静态路由，支持 64 以上长度的路由
+- 优化 `@RequestMapping` 注解事件的方法返回值处理，支持数组和字符串（数组自动转为 JSON 格式）
+- 优化单元测试流程
+- 优化上下文对象，在非协程环境下不再会抛出异常或返回 null
+- 修改默认 Hello 模块下随机数功能为采用 `@CommandArgument` 注解模式
+- 重构帮助生成器，将帮助生成器重构为 `CommandInfoUtil` 类
+- 修复 `CQ::encode()` 无法传入 `int` 的强类型解析问题（#113）
+- （内部）重构 CQ 类
+- 修复 `EventMapIterator` 对 PHP 8.1 的兼容性问题
+- 修复 #95 中提到的无输入流时报错的问题
+- 修复 `ZMServer` 中的 typo
+- 修复 Container 环境继承全局变量的问题
+- 修复 `server:stop` 命令下部分情况报错的问题
+
 ## v2.7.6（build 460）
 
 > 更新时间：2022.4.3
