--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,12 @@
 # 更新日志（v2 版本）
 
+## v2.8.1（build 475）
+
+> 更新时间：2022.7.3
+
+- 修复 WebSocket 连接时报错的 Bug
+- 修复 `match_args` 全局方法对于 `0` 字符串处理的 Bug（#136）
+
 ## v2.8.0（build 473）
 
 > 更新时间：2022.5.7
