--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.8.2（build 476）
+
+> 更新时间：2022.8.3
+
+- `DataProvider::scanDirFiles()` 新增参数 `$include_dir`，用于控制非递归模式下是否包含目录
+
 ## v2.8.1（build 475）
 
 > 更新时间：2022.7.3
