--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.8.3（build 477）
+
+> 更新时间：2022.8.5
+
+- 修复了 `@CQNotice`、`@CQRequest` 注解无法正常激活的 Bug (#140)
+
 ## v2.8.2（build 476）
 
 > 更新时间：2022.8.3
