--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.8.4（build 478）
+
+> 更新时间：2022.8.7
+
+- 修复 `zm_sleep()` 无法传入小数的 Bug (#141)
+
 ## v2.8.3（build 477）
 
 > 更新时间：2022.8.5
