update update logs

--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,26 @@
 
 > 本页面由框架自动生成
 
+## v3.0.0-beta6
+
+> 更新时间：2023-01-15
+
+* 文档更新 - 机器人上下文 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#243](https://github.com/zhamao-robot/zhamao-framework/pull/243)
+* 更新版权所有年份 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#244](https://github.com/zhamao-robot/zhamao-framework/pull/244)
+* 修复 Doxygen 缺少权限.. by [@sunxyw](https://github.com/sunxyw) in [PR#245](https://github.com/zhamao-robot/zhamao-framework/pull/245)
+* 更新部分文档和新增有关生成器 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#246](https://github.com/zhamao-robot/zhamao-framework/pull/246)
+* 文档新增更新日志 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#247](https://github.com/zhamao-robot/zhamao-framework/pull/247)
+* 新增 prompt 方法的选项参数 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#248](https://github.com/zhamao-robot/zhamao-framework/pull/248)
+* 优化 ZMRequest POST 数据时允许直接传入数组 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#249](https://github.com/zhamao-robot/zhamao-framework/pull/249)
+* 删除 Context by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#250](https://github.com/zhamao-robot/zhamao-framework/pull/250)
+* 更新 BotContext 和 FileSystem 文档 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#251](https://github.com/zhamao-robot/zhamao-framework/pull/251)
+* 文档更新：全局常量和方法 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#252](https://github.com/zhamao-robot/zhamao-framework/pull/252)
+* 添加环境变量支持 by [@sunxyw](https://github.com/sunxyw) in [PR#255](https://github.com/zhamao-robot/zhamao-framework/pull/255)
+* 重构插件加载器、BotContext、AnnotationMap 新增方法、修复部分 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#254](https://github.com/zhamao-robot/zhamao-framework/pull/254)
+
+
+**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta5...3.0.0-beta6>
+
 ## v3.0.0-beta5
 
 > 更新时间：2023-01-04
