--- a/docs/update/v2.md
+++ b/docs/update/v2.md
@@ -1,5 +1,11 @@
 # 更新日志（v2 版本）
 
+## v2.8.6（build 480）
+
+> 更新时间：2022.1.26
+
+- 为task进程注册mysql和redis以便在task任务处理中使用相关组件 by @YiwanGi in https://github.com/zhamao-robot/zhamao-framework/pull/271
+
 ## v2.8.5（build 479）
 
 > 更新时间：2022.12.24
