--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -1,12 +1,12 @@
 # 更新日志
 
-> 本页面由框架自动生成
+> 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
 ## v3.0.0-beta6
 
 > 更新时间：2023-01-15
 
-* 文档更新 - 机器人上下文 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#243](https://github.com/zhamao-robot/zhamao-framework/pull/243)
+* 本次更新包含文档更新内容 5 个
 * 更新版权所有年份 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#244](https://github.com/zhamao-robot/zhamao-framework/pull/244)
 * 修复 Doxygen 缺少权限.. by [@sunxyw](https://github.com/sunxyw) in [PR#245](https://github.com/zhamao-robot/zhamao-framework/pull/245)
 * 更新部分文档和新增有关生成器 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#246](https://github.com/zhamao-robot/zhamao-framework/pull/246)
@@ -19,8 +19,7 @@
 * 添加环境变量支持 by [@sunxyw](https://github.com/sunxyw) in [PR#255](https://github.com/zhamao-robot/zhamao-framework/pull/255)
 * 重构插件加载器、BotContext、AnnotationMap 新增方法、修复部分 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#254](https://github.com/zhamao-robot/zhamao-framework/pull/254)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta5...3.0.0-beta6>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta5...3.0.0-beta6>
 
 ## v3.0.0-beta5
 
@@ -44,15 +43,14 @@
 * 重构新的 waitMessage 到 prompt by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#241](https://github.com/zhamao-robot/zhamao-framework/pull/241)
 * 添加 OneBot 12 文件上传和下载工具 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#242](https://github.com/zhamao-robot/zhamao-framework/pull/242)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta4...3.0.0-beta5>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta4...3.0.0-beta5>
 
 ## v3.0.0-beta4
 
 > 更新时间：2022-12-31
 
 * 切换 Git Hook 至 Captainhook by [@sunxyw](https://github.com/sunxyw) in [PR#218](https://github.com/zhamao-robot/zhamao-framework/pull/218)
-* 升级 v3 文档构建发布路径 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#219](https://github.com/zhamao-robot/zhamao-framework/pull/219)
+* 本次更新包含文档更新内容 2 个
 * 根据最新的分支命名更新 Workflows by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#220](https://github.com/zhamao-robot/zhamao-framework/pull/220)
 * 更新部分文档 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#221](https://github.com/zhamao-robot/zhamao-framework/pull/221)
 * 将 KV 库接口调整为 PSR-16 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#222](https://github.com/zhamao-robot/zhamao-framework/pull/222)
@@ -60,8 +58,7 @@
 * 边缘 Bug 修复 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#224](https://github.com/zhamao-robot/zhamao-framework/pull/224)
 * 重构配置类配置 by [@sunxyw](https://github.com/sunxyw) in [PR#225](https://github.com/zhamao-robot/zhamao-framework/pull/225)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta3...3.0.0-beta4>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta3...3.0.0-beta4>
 
 ## v3.0.0-beta3
 
@@ -70,7 +67,7 @@
 * 添加 Windows 入口 by [@sunxyw](https://github.com/sunxyw) in [PR#208](https://github.com/zhamao-robot/zhamao-framework/pull/208)
 * 重构异常处理 by [@sunxyw](https://github.com/sunxyw) in [PR#209](https://github.com/zhamao-robot/zhamao-framework/pull/209)
 * 添加命令帮助插件 by [@sunxyw](https://github.com/sunxyw) in [PR#210](https://github.com/zhamao-robot/zhamao-framework/pull/210)
-* 加（一些）事件文档 by [@sunxyw](https://github.com/sunxyw) in [PR#212](https://github.com/zhamao-robot/zhamao-framework/pull/212)
+* 本次更新包含文档更新内容 1 个
 * 修复 BotContext 不同步问题 by [@sunxyw](https://github.com/sunxyw) in [PR#211](https://github.com/zhamao-robot/zhamao-framework/pull/211)
 * 让容器支持协程 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#213](https://github.com/zhamao-robot/zhamao-framework/pull/213)
 * 拆分 Bot 动作到 Trait 以及更新一些类型强化的代码 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#214](https://github.com/zhamao-robot/zhamao-framework/pull/214)
@@ -78,8 +75,7 @@
 * 新增 ZMRequest by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#216](https://github.com/zhamao-robot/zhamao-framework/pull/216)
 * 新增全新的 LightCache by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#217](https://github.com/zhamao-robot/zhamao-framework/pull/217)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta2...3.0.0-beta3>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta2...3.0.0-beta3>
 
 ## v3.0.0-beta2
 
@@ -97,11 +93,10 @@
 * 添加 HttpEventListener 测试 by [@sunxyw](https://github.com/sunxyw) in [PR#200](https://github.com/zhamao-robot/zhamao-framework/pull/200)
 * 添加插件生成功能 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#202](https://github.com/zhamao-robot/zhamao-framework/pull/202)
 * 完善 BotCommand 和 CommandArgument 的解析 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#203](https://github.com/zhamao-robot/zhamao-framework/pull/203)
-* 重写文档 by [@sunxyw](https://github.com/sunxyw) in [PR#205](https://github.com/zhamao-robot/zhamao-framework/pull/205)
+* 本次更新包含文档更新内容 1 个
 * 发布 beta2 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#206](https://github.com/zhamao-robot/zhamao-framework/pull/206)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta1...3.0.0-beta2>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta1...3.0.0-beta2>
 
 ## v3.0.0-beta1
 
@@ -155,6 +150,5 @@
 * 容器增加 class_alias 支持 by [@sunxyw](https://github.com/sunxyw) in [PR#189](https://github.com/zhamao-robot/zhamao-framework/pull/189)
 * Beta 1 发布 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#188](https://github.com/zhamao-robot/zhamao-framework/pull/188)
 
-
-**Full Changelog**: <https://github.com/zhamao-robot/zhamao-framework/compare/2.8.0...3.0.0-beta1>
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/2.8.0...3.0.0-beta1>
 
