update v3 update docs and generate strategy

--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,22 @@
 
 > 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
+## v3.0.0-beta7
+
+> 更新时间：2023-02-04
+
+* 本次更新包含文档更新内容 8 个
+* 修复 Cron 使用闭包方法导致错误的 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#264](https://github.com/zhamao-robot/zhamao-framework/pull/264)
+* 新增 WebSocket Frame 对象的依赖注入 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#265](https://github.com/zhamao-robot/zhamao-framework/pull/265)
+* 新增 ZMRequest 的类别名 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#266](https://github.com/zhamao-robot/zhamao-framework/pull/266)
+* 新增 `--verbose` 对 Logger 切换 debug 模式的响应 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#267](https://github.com/zhamao-robot/zhamao-framework/pull/267)
+* 新增插件安装命令、重构插件命令基类 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#268](https://github.com/zhamao-robot/zhamao-framework/pull/268)
+* 新增动态 Token 鉴权功能 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#269](https://github.com/zhamao-robot/zhamao-framework/pull/269)
+* 新增 TaskWorker 支持，新增注解组支持 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#272](https://github.com/zhamao-robot/zhamao-framework/pull/272)
+* 新增插件打包功能，修复 build 命令的一些问题 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#276](https://github.com/zhamao-robot/zhamao-framework/pull/276)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta6...3.0.0-beta7>
+
 ## v3.0.0-beta6
 
 > 更新时间：2023-01-15
@@ -9,13 +25,9 @@
 * 本次更新包含文档更新内容 5 个
 * 更新版权所有年份 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#244](https://github.com/zhamao-robot/zhamao-framework/pull/244)
 * 修复 Doxygen 缺少权限.. by [@sunxyw](https://github.com/sunxyw) in [PR#245](https://github.com/zhamao-robot/zhamao-framework/pull/245)
-* 更新部分文档和新增有关生成器 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#246](https://github.com/zhamao-robot/zhamao-framework/pull/246)
-* 文档新增更新日志 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#247](https://github.com/zhamao-robot/zhamao-framework/pull/247)
 * 新增 prompt 方法的选项参数 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#248](https://github.com/zhamao-robot/zhamao-framework/pull/248)
 * 优化 ZMRequest POST 数据时允许直接传入数组 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#249](https://github.com/zhamao-robot/zhamao-framework/pull/249)
 * 删除 Context by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#250](https://github.com/zhamao-robot/zhamao-framework/pull/250)
-* 更新 BotContext 和 FileSystem 文档 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#251](https://github.com/zhamao-robot/zhamao-framework/pull/251)
-* 文档更新：全局常量和方法 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#252](https://github.com/zhamao-robot/zhamao-framework/pull/252)
 * 添加环境变量支持 by [@sunxyw](https://github.com/sunxyw) in [PR#255](https://github.com/zhamao-robot/zhamao-framework/pull/255)
 * 重构插件加载器、BotContext、AnnotationMap 新增方法、修复部分 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#254](https://github.com/zhamao-robot/zhamao-framework/pull/254)
 
@@ -52,7 +64,6 @@
 * 切换 Git Hook 至 Captainhook by [@sunxyw](https://github.com/sunxyw) in [PR#218](https://github.com/zhamao-robot/zhamao-framework/pull/218)
 * 本次更新包含文档更新内容 2 个
 * 根据最新的分支命名更新 Workflows by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#220](https://github.com/zhamao-robot/zhamao-framework/pull/220)
-* 更新部分文档 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#221](https://github.com/zhamao-robot/zhamao-framework/pull/221)
 * 将 KV 库接口调整为 PSR-16 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#222](https://github.com/zhamao-robot/zhamao-framework/pull/222)
 * 修复有关 BotCommand 的 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#223](https://github.com/zhamao-robot/zhamao-framework/pull/223)
 * 边缘 Bug 修复 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#224](https://github.com/zhamao-robot/zhamao-framework/pull/224)
