update release docs

--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,21 @@
 
 > 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
+## v3.0.0
+
+> 更新时间：2023-02-10
+
+* 添加容器缓存配置 by [@sunxyw](https://github.com/sunxyw) in [PR#279](https://github.com/zhamao-robot/zhamao-framework/pull/279)
+* 本次更新包含文档更新内容 1 个
+* 修复 Pipeline 回调参数缺失 by [@sunxyw](https://github.com/sunxyw) in [PR#281](https://github.com/zhamao-robot/zhamao-framework/pull/281)
+* 修复中间件传参解析冲突 by [@sunxyw](https://github.com/sunxyw) in [PR#282](https://github.com/zhamao-robot/zhamao-framework/pull/282)
+* 修复不兼容 onebots 端的问题 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#284](https://github.com/zhamao-robot/zhamao-framework/pull/284)
+* 新增计时器 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#283](https://github.com/zhamao-robot/zhamao-framework/pull/283)
+* 准备发布 3.0 的一些小修 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#285](https://github.com/zhamao-robot/zhamao-framework/pull/285)
+* 修复排程任务 Swoole 死锁 by [@sunxyw](https://github.com/sunxyw) in [PR#286](https://github.com/zhamao-robot/zhamao-framework/pull/286)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0-beta7...3.0.0>
+
 ## v3.0.0-beta7
 
 > 更新时间：2023-02-04
